// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AskString component asdf 1`] = `
<div>
  <form>
    <textarea
      class="textbox focusme"
      name="val"
    >
      newValue
    </textarea>
    <div
      class="submitline"
    >
      <input
        type="submit"
        value="OK"
      />
    </div>
  </form>
</div>
`;

exports[`AskString component ask short string renders properly 1`] = `
<div>
  <form>
    <input
      aria-label="Value"
      class="textbox focusme"
      name="val"
      value="defaultValue"
    />
    <input
      type="submit"
      value="OK"
    />
  </form>
</div>
`;
